Fixed mobile footer spacing

--- a/raw/sass/base/__base.scss
+++ b/raw/sass/base/__base.scss
@@ -21,10 +21,10 @@
 @include keyframes(pulse) {
   0% { @include transform(scale(1)); }
   30% { @include transform(scale(1)); }
-  40% { @include transform(scale(1.1)); }
+  40% { @include transform(scale(1.2)); }
   50% { @include transform(scale(1)); }
   60% { @include transform(scale(1)); }
-  70% { @include transform(scale(1.08)); }
+  70% { @include transform(scale(1.15)); }
   80% { @include transform(scale(1)); }
   100% { @include transform(scale(1)); }
 }
